--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
